# discord

./: .gitignore  .pylintrc  README.md  bot.py  build_main.sh  db.py  discordbot.py  firebase_db.py  guild.py  pyproject.toml  requirements.txt  sendCode.py  sendgrid_email.py
.github/workflows/: main.yaml
bot/: firebase_db.py  main.py  secrets.py  sendgrid_email.py  server.py  verification.py  welcome.py
secrets/: bitByBIT.env  test.env
