[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["ACM UCR <acm@cs.ucr.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
shortuuid = "^1.0.11"
python-dotenv = "^1.0.0"
firebase-admin = "^6.2.0"
sendgrid = "^6.10.0"
discord-py = "^2.3.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
yapf = "^0.40.1"

[tool.poetry.scripts]
bot = "bot.main:main"
pylint = "pylint ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
